Isolate vendor credentials from API
